# QResponder-GRC

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.example.yaml  docker-compose.yml  eval.example.yaml  eval.yaml  pyproject.toml  qa.example.yaml
.github/workflows/: ci.yml
docs/: GOOD_FIRST_ISSUES.md
scripts/: demo.sh
src/qresponder/: __init__.py  cli.py  config.py  models.py
src/qresponder/connectors/: __init__.py  base.py  confluence.py  folder.py  gdrive.py  notion.py  oauth.py  onedrive.py  sharepoint.py  website.py
src/qresponder/core/: __init__.py  answer.py  attachments.py  batch.py  bulk_ingest.py  confidence.py  conflicts.py  csvio.py  decompose.py  extract.py  faithfulness.py  flywheel.py  history.py  interpretations.py  kb_health.py  normalize.py  orchestrate.py  parsing.py  pipeline.py  presets.py  qa_import.py  safety.py  stats.py  typeshape.py  workspace.py
src/qresponder/eval/: __init__.py  metrics.py  runner.py
src/qresponder/ingest/: __init__.py  base.py  docx.py  ir.py  pdf.py  xlsx.py
src/qresponder/kb/: __init__.py  base.py  (+5 more)
tests/: make_fixtures.py  test_accuracy_followons.py  test_answer.py  test_ask.py  test_attachments.py  test_audit.py  test_batch.py  test_bulk_ingest.py  test_conflicts.py  test_connectors.py  test_connectors_saas.py  test_csvio.py  test_dashboard.py  test_dashboard_endpoints.py  test_doctor.py  test_eval.py  test_extract.py  test_faithfulness.py  test_flagged_resolve.py  test_flywheel.py  test_imports.py  test_ingest.py  test_interpretations.py  test_kb.py  test_kb_health.py  test_llm.py  test_oauth.py  test_pipeline.py  test_presets.py  test_providers.py  test_retrieval.py  test_safety.py  test_source_filter.py  test_stats.py  test_typeshape.py  test_web.py  test_web_providers.py  test_web_workspaces.py  test_workspace.py  test_writeback.py
tests/fixtures/: eval.yaml  qa.yaml  sample.docx  sample.xlsx
(+34 files in other folders)
